--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 				<div id="thankPage">
 					<div id="thankIllust">
-						<img src="./images/illustration-thank-you.svg" alt="">
+						<img src="./images/illustration-thank-you.svg" alt="" />
 					</div>
 					<h3 id="selectRating">
 						You selected
@@ -64,14 +64,14 @@
 					</p>
 				</div>
 			</div>
-		</div>
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="#">hsieneis</a>.
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="#">hsieneis</a>.
+			</div>
 		</div>
 
 		<script src="./index.js"></script>
