fix some ARIA landmark

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 	</head>
 	<body>
 		<div class="container">
-			<div id="page">
+			<div id="page" role="main">
 				<div id="ratingPage">
 					<div id="star">
-						<img src="./images/icon-star.svg" />
+						<img src="./images/icon-star.svg" alt="" />
 					</div>
-					<h2 id="title">How did we do?</h2>
+					<h1 id="title">How did we do?</h1>
 					<p id="description">
 						Please let us know how we did with your support request.
 						All feedback is appreciated to help us improve our
@@ -64,7 +64,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="attribution">
+			<div class="attribution" role="contentinfo">
 				Challenge by
 				<a
 					href="https://www.frontendmentor.io?ref=challenge"
